# EXO_OS_2

./: .gitignore  DL.md  README.md  filesystem.md  fs.md  makefile  mlibc_port_plan.md  mod  network.md  todo  users.md  userspace
src/boot/: limine.conf
src/kernel/: linker.ld  main.c
src/kernel/arch/x86_64/: acpi.c  acpi.h  apic.c  apic.h  cpu.h  gdt.c  gdt.h  hpet.c  hpet.h  idt.c  idt.h  ioapic.c  ioapic.h  isr.asm  pci.c  pci.h  rtc.c  rtc.h  smp.c  smp.h  trampoline.asm
src/kernel/drivers/: devfs.c  devfs.h  devpts.c  devpts.h  fb.c  fb.h  pty.c  pty.h
src/kernel/drivers/bus/: i2c.h  smbus.c  smbus.h
src/kernel/drivers/input/: evdev.c  evdev.h  input.c  input.h
src/kernel/drivers/net/: e1000.c  e1000.h  netdev.c  netdev.h  virtio_net.c  virtio_net.h
src/kernel/drivers/storage/: ahci.c  ahci.h  blkdev.c  blkdev.h  virtio_blk.c  virtio_blk.h
src/kernel/drivers/usb/: hid.c  hid.h  usb_core.c  usb_core.h  xhci.c  xhci.h
src/kernel/fs/: bcache.c  bcache.h  elf.c  elf.h  fd.c  fd.h  gpt.c  gpt.h  path.c  procfs.c  procfs.h  sysfs.c  vfs.c  vfs.h
src/kernel/fs/ext2/: ext2.c  ext2.h
src/kernel/fs/fat32/: fat32.c  fat32.h
src/kernel/fs/tmpfs/: tmpfs.c  tmpfs.h
src/kernel/gfx/: compositor.c  compositor.h  cursor.c  cursor.h  desktop.c  desktop.h  fbcon.c  fbcon.h  font.h  gfx.c  gfx.h  startmenu.c  startmenu.h  sysinfo.c  sysinfo.h  taskbar.c  taskbar.h  taskmgr.c  taskmgr.h  virtio_gpu.c  virtio_gpu.h  wm.c  wm.h
src/kernel/ipc/: ipc.c  ipc.h  pipe.c  signal.c  signal.h
src/kernel/lib/: klog.c  klog.h  panic.c  panic.h  spinlock.h  string.c  string.h  timer.c  timer.h
src/kernel/mm/: kmalloc.c  kmalloc.h  pagecache.c  pagecache.h  pmm.c  pmm.h  vmm.c  vmm.h
src/kernel/net/: arp.c  arp.h  dhcp.c  dhcp.h  ethernet.c  ethernet.h  icmp.c  icmp.h  ipv4.c  ipv4.h  net_init.c  netutil.h  skbuff.c  skbuff.h  socket.c  socket.h  socket_defs.h  tcp.c  tcp.h  tcp_input.c  tcp_output.c  tcp_timer.c  udp.c  udp.h  unix.c  unix.h
src/kernel/sched/: context_switch.asm  cred.h  sched.c  sched.h  task.c  task.h  waitq.c  waitq.h
src/kernel/shell/: cmd_monitor.c  cputest.c  cputest.h  shell.c  shell.h
src/kernel/syscall/: epoll.c  epoll.h  file_syscalls.c  net_syscalls.c  proc_syscalls.c  syscall.c  syscall.h
src/mlibc-sysdeps/exo/: entry.c  entry.cpp  exo-cross.ini  generic.c  generic_shim.cpp  meson.build  syscall_stub.c  thread.cpp
src/mlibc-sysdeps/exo/include/: getopt.h  mntent.h  paths.h
src/mlibc-sysdeps/exo/include/abi-bits/: abi.h  off_t.h  ssize_t.h
src/mlibc-sysdeps/exo/include/sys/: ioctl.h  sysmacros.h
src/mlibc-sysdeps/exo/x86_64/: spawn_thread.S
src/mlibc-sysdeps/exo/x86_64/crt-src/: crt1.S
src/rust/: Cargo.toml
src/rust/.cargo/: config.toml
src/rust/src/: lib.rs  math.rs  panic.rs  path.rs
src/zig/: build.zig  build.zig.zon
src/zig/src/: gpt.zig
tools/: dlopen_test.c  exo_nettest.py  gen_font.c  hello.c  hello_dynamic.c  init.c  libtest.c  mlibc_hello.c  mlibc_ls.c  mlibc_mkdir.c  mlibc_posix_suite.c  mlibc_pthread_smoke.c  mlibc_rm.c  patch_mlibc_meson.py  su.c  syscall_test.c
tools/rootfs/: environment  external_bins.sh  fish  group  ld.so.conf  main.c  nsswitch.conf  passwd  profile  resolv.conf  shadow  stage_bins.sh  stage_compiler.sh
